Fix dropdown menu and toggler now aligned with hamburger

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,8 +18,10 @@ html {
 img {
   max-width: 100%;
   height: auto;
+}
 
-
+nav {
+  position: relative;
 }
 
 body {
@@ -35,10 +37,10 @@ body {
   /* ALWAYS KEEPING THE TOGGLER OR THE CHECKBOX ON TOP OF EVERYTHING :  */
   z-index: 2;
   position: absolute;
-  top: 0;
-  left: 0;
-  height: 50px;
-  width: 50px;
+  top: 14px;
+  left: 12px;
+  height: 35px;
+  width: 35px;
   cursor: pointer;
   opacity: 0;
 }
@@ -123,8 +125,9 @@ TOP AT -10PX ABOVE THE MIDDLE ONE AND BOTTOM ONE IS 10PX BELOW THE MIDDLE: */
   position: absolute;
   background: #f8f8f8;
   opacity: 100%;
-  height: 100vh;
-  top: 60px;
+  height: 30svh;
+  top: 100%;
+  left: 0;
 
 /* APPLYING TRANSITION TO THE MENU :  */
 
@@ -134,7 +137,7 @@ TOP AT -10PX ABOVE THE MIDDLE ONE AND BOTTOM ONE IS 10PX BELOW THE MIDDLE: */
 /* IF THE TOGGLER IS CHECKED, THEN INCREASE THE WIDTH OF THE MENU TO 50% , CREATING A SMOOTH EFFECT :  */
 
 .toggler:checked ~ .menu {
-  width: 73%;
+  width: 50%;
 }
 
 /* STYLING THE LIST :  */
